# smarts-evolution

./: .gitignore  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  build.rs
.cargo/: config.toml
.github/workflows/: ci.yml  pages.yml
.tmp/: smarts_evolution_worker_smoke.jsonl
apps/web/: Cargo.toml  Dioxus.toml  build.rs  index.html
apps/web-protocol/: Cargo.toml
apps/web-protocol/src/: lib.rs
apps/web-worker/: Cargo.toml
apps/web-worker/src/: lib.rs
apps/web/assets/: style.css
apps/web/examples/: amphetamines_and_derivatives_negative.smiles  amphetamines_and_derivatives_positive.smiles  benzodiazepines_negative.smiles  benzodiazepines_positive.smiles  fatty_acids_and_conjugates_negative.smiles  fatty_acids_and_conjugates_positive.smiles  flavonoids_negative.smiles  flavonoids_positive.smiles  penicillins_negative.smiles  penicillins_positive.smiles  steroids_and_steroid_derivatives_negative.smiles  steroids_and_steroid_derivatives_positive.smiles
apps/web/public/: style.css
apps/web/src/: icons.rs  main.rs  plot.rs
benches/: evolution.rs
docs/: pubchem-smarts-compatibility.md
experiments/: example_support.rs
src/: lib.rs  logging.rs  main.rs  rdkit_substruct_library.rs
src/bridge/: mod.rs  substruct_library.rs
src/data/: classyfire.rs  compound.rs  io.rs  mod.rs  molecule_cache.rs  npc.rs  rdkit_lock.rs  sync.rs
src/evolution/: checkpoint.rs  config.rs  indicatif.rs  mod.rs  ntfy.rs  process_pool.rs  runner.rs  tui.rs
src/evolution/tui/: input.rs  layout.rs  metric.rs  platform.rs  render.rs  state.rs  tests.rs  worker.rs
src/fitness/: evaluator.rs  mcc.rs  mod.rs  objective.rs
src/genome/: compatibility.rs  display.rs  genome.rs  limits.rs  mod.rs  parser.rs  pattern.rs  seed.rs  token.rs
src/operators/: crossover.rs  mod.rs  mutation.rs  primitives.rs
src/taxonomy/: builder.rs  dag.rs  mod.rs  node.rs
src/validation/: mod.rs  splits.rs  stratified.rs
tests/: process_pool_integration.rs
wrapper/include/: substruct_library.h
wrapper/src/: substruct_library.cc
