[package]
name = "smarts-evolution"
version = "0.1.0"
edition = "2024"

[features]
default = ["std-io"]
std-io = []
wasm = ["genevo/wasm-bindgen"]

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1

[dependencies]
genevo = "0.7"
smarts-parser = { git = "https://github.com/earth-metabolome-initiative/smarts-rs", branch = "main", package = "smarts-parser" }
smarts-validator = { git = "https://github.com/earth-metabolome-initiative/smarts-rs", branch = "main", package = "smarts-validator" }
smiles-parser = { git = "https://github.com/earth-metabolome-initiative/smiles-parser", branch = "main" }
rand = "0.8"
log = "0.4"

[lints.clippy]
all = { level = "warn", priority = -1 }
dbg_macro = "deny"
todo = "deny"
unimplemented = "deny"
expect_used = "warn"
panic = "warn"
