[package]
name = "smarts-evolution"
version = "0.1.0"
edition = "2024"

[features]
default = ["std"]
std = ["dep:rayon"]

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1

[dependencies]
smarts-parser = { git = "https://github.com/earth-metabolome-initiative/smarts-rs", branch = "main", package = "smarts-parser" }
smarts-validator = { git = "https://github.com/earth-metabolome-initiative/smarts-rs", branch = "main", package = "smarts-validator" }
smiles-parser = { git = "https://github.com/earth-metabolome-initiative/smiles-parser", branch = "main" }
rand = { version = "0.8", default-features = false, features = ["alloc", "small_rng"] }
getrandom = { version = "0.2.17", features = ["js"] }
log = { version = "0.4", default-features = false }
hashbrown = { version = "0.15", default-features = false, features = ["default-hasher"] }
rayon = { version = "1.11", optional = true }

[dev-dependencies]
criterion = "0.5"

[[bench]]
name = "evolution"
harness = false

[lints.clippy]
all = { level = "warn", priority = -1 }
dbg_macro = "deny"
todo = "deny"
unimplemented = "deny"
expect_used = "warn"
panic = "warn"
