[package]
name = "smarts-evolution"
version = "0.1.0"
edition = "2024"

[features]
default = ["std"]
indicatif = ["std", "dep:indicatif"]
std = ["dep:rayon"]

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1

[dependencies]
elements_rs = "0.2.3"
smarts-rs = { git = "https://github.com/earth-metabolome-initiative/smarts-rs", branch = "main" }
smiles-parser = { git = "https://github.com/earth-metabolome-initiative/smiles-parser", branch = "main" }
rand = { version = "0.10.1", default-features = false, features = ["alloc", "std_rng"] }
getrandom = { version = "0.4.2", features = ["wasm_js"] }
log = { version = "0.4.29", default-features = false }
hashbrown = { version = "0.17.0", default-features = false, features = ["default-hasher"] }
indicatif = { version = "0.18.4", default-features = false, optional = true }
rayon = { version = "1.12.0", optional = true }

[dev-dependencies]
criterion = "0.8.2"

[[bench]]
name = "evolution"
harness = false

[lints.clippy]
all = { level = "warn", priority = -1 }
dbg_macro = "deny"
todo = "deny"
unimplemented = "deny"
expect_used = "warn"
panic = "warn"
