[package]
name = "smarts-evolution-web-worker"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib"]

[profile.dev]
debug = 0

[profile.wasm-dev]
inherits = "dev"
debug = 0

[dependencies]
getrandom = { version = "0.2.17", features = ["js"] }
js-sys = "0.3.82"
serde-wasm-bindgen = "0.6.5"
smarts-evolution = { path = "../.." }
smarts-evolution-web-protocol = { path = "../web-protocol" }
smiles-parser = { git = "https://github.com/earth-metabolome-initiative/smiles-parser", branch = "main" }
smarts-validator = { git = "https://github.com/earth-metabolome-initiative/smarts-rs", branch = "main", package = "smarts-validator" }
wasm-bindgen = "0.2.105"
web-sys = { version = "0.3.82", features = ["DedicatedWorkerGlobalScope", "MessageEvent"] }
