[package]
name = "smarts-evolution-web-worker"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib"]

[profile.dev]
debug = 0

[profile.wasm-dev]
inherits = "dev"
debug = 0

[dependencies]
getrandom = { version = "0.4.2", features = ["wasm_js"] }
js-sys = "0.3.95"
serde-wasm-bindgen = "0.6.5"
smarts-evolution = { path = "../.." }
smarts-evolution-web-protocol = { path = "../web-protocol" }
smiles-parser = { git = "https://github.com/earth-metabolome-initiative/smiles-parser", branch = "main" }
smarts-rs = { git = "https://github.com/earth-metabolome-initiative/smarts-rs", branch = "main" }
wasm-bindgen = "0.2.118"
web-sys = { version = "0.3.95", features = ["DedicatedWorkerGlobalScope", "MessageEvent", "Performance", "WorkerGlobalScope"] }

[lints.clippy]
all = { level = "warn", priority = -1 }
dbg_macro = "deny"
todo = "deny"
unimplemented = "deny"
expect_used = "warn"
panic = "warn"
unwrap_used = "warn"
