[package]
name = "smarts-evolution-web"
version = "0.1.0"
edition = "2024"
build = "build.rs"

[features]
default = ["web"]
web = ["dioxus/web"]

[dependencies]
dioxus = "0.7.5"
serde-wasm-bindgen = "0.6.5"
smiles-parser = { git = "https://github.com/earth-metabolome-initiative/smiles-parser" }
smarts-evolution-web-protocol = { path = "../web-protocol" }
wasm-bindgen = "0.2.105"
web-sys = { version = "0.3.82", features = ["CanvasRenderingContext2d", "Document", "Element", "ErrorEvent", "HtmlCanvasElement", "HtmlElement", "MessageEvent", "MouseEvent", "Window", "Worker", "WorkerOptions", "WorkerType"] }

[build-dependencies]
wasm-bindgen-cli-support = "0.2.105"

[profile.wasm-dev]
inherits = "dev"
debug = 0
