[package]
name = "smarts-evolution-web"
version = "0.1.0"
edition = "2024"
build = "build.rs"

[features]
default = ["web"]
web = ["dioxus/web"]

[dependencies]
dioxus = "0.7.6"
serde-wasm-bindgen = "0.6.5"
smarts-evolution = { path = "../..", default-features = false }
smiles-parser = { git = "https://github.com/earth-metabolome-initiative/smiles-parser", branch = "main" }
smarts-evolution-web-protocol = { path = "../web-protocol" }
wasm-bindgen = "0.2.118"
web-sys = { version = "0.3.95", features = ["CanvasRenderingContext2d", "Document", "Element", "ErrorEvent", "HtmlCanvasElement", "HtmlElement", "MessageEvent", "MouseEvent", "Window", "Worker", "WorkerOptions", "WorkerType"] }

[build-dependencies]
wasm-bindgen-cli-support = "0.2.118"

[profile.wasm-dev]
inherits = "dev"
debug = 0

[lints.clippy]
all = { level = "warn", priority = -1 }
dbg_macro = "deny"
todo = "deny"
unimplemented = "deny"
expect_used = "warn"
panic = "warn"
unwrap_used = "warn"
